# Raise_the_terrain

./: CMakeLists.txt  README.md  compile.sh
Headers/: basic_libs.h
Source/: _Sdl_born.c  _close_win.c  _draw_map.c  _init_map.c  _load_img.c  event_horizon.c  main.c  turn_world.c
